--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "install-server": "npm install --prefix server",
+    "install-client": "npm install --prefix client",
+    "install": "npm run install-server && npm run install-client",
     "server": "npm run watch --prefix server",
     "client": "npm start --prefix client",
-    "watch": "npm-run-all -p server client",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "npm run server & npm run client",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "npm run build --prefix client && npm start --prefix server"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +19,8 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
+    "morgan": "^1.10.0"
   }
 }
